# RIOe-Test-Project

./: CMakeLists.txt  Makefile  Makefile.bad  Makefile.txt  projectConfig.yaml
content/models/: Angel.glb  Cafe.glb  Hotel.glb
content/shaders/: gltf_test.frag
fs/content/shaders/: gltf_test.gsh
include/: RootTask.h
lib/rio-e/include/rio-e/: Endian.h  GLTFHelper.h  ModelLoader.h  PropertyCreatorMgr.h  SaveMgr.h  SceneMgr.h
lib/rio-e/include/rio-e/Properties/: DebugDisplayProperty.hpp  MaterialProperty.hpp  MeshDisplayProperty.hpp  ModelDisplayProperty.hpp
lib/rio-e/include/rio-e/Types/: Material.h  Mesh.h  Model.h  Node.h  Property.h  Scene.h  Skeleton.h
lib/rio-e/src/rio-e/: GLTFHelper.cpp  ModelLoader.cpp  PropertyCreatorMgr.cpp  SaveMgr.cpp  SceneMgr.cpp
lib/rio-e/src/rio-e/Types/: Material.cpp  Mesh.cpp  Skeleton.cpp
lib/rio/include (2)/math/: rio_Math.h
lib/rio/include/filedevice/: rio_NativeFileDevice.h
lib/rio/include/gfx/: rio_Projection.h
lib/rio/include/math/: rio_Matrix.h
lib/rio/include/math/impl/: rio_MatrixImpl.h
lib/rio/src/controller/cafe/: rio_CafeRemoteControllerCafe.cpp
src/: RootTask.cpp  main.cpp
